force-app/main/default/objects/Contact/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <defaultValue>&apos;#ff6666&apos;</defaultValue>
    <label>Colour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>