force-app/main/default/objects/Contact/fields/Hometown__c.field-meta.xml
<CustomField>
    <fullName>Hometown__c</fullName>
    <label>Hometown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>