force-app/main/default/objects/Contact/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <label>Image Link</label>
    <type>TextArea</type>
</CustomField>