force-app/main/default/objects/Contact/fields/Image_View__c.field-meta.xml
<CustomField>
    <fullName>Image_View__c</fullName>
    <formula>IMAGE( Image_Link__c , &quot;Not Visible&quot; ,200,200)</formula>
    <label>Image View</label>
    <type>Text</type>
</CustomField>