force-app/main/default/objects/Contact/fields/is_Send_Email_Confirm__c.field-meta.xml
<CustomField>
    <fullName>is_Send_Email_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_Send_Email_Confirm</label>
    <type>Checkbox</type>
</CustomField>