force-app/main/default/objects/Contact/fields/Kids__c.field-meta.xml
<CustomField>
    <fullName>Kids__c</fullName>
    <label>Kids</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>