force-app/main/default/objects/Contact/fields/Linkedin_Url__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Url__c</fullName>
    <label>Linkedin Url</label>
    <type>Url</type>
</CustomField>