force-app/main/default/objects/Contact/fields/Loyalty_Member_Category__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member_Category__c</fullName>
    <label>Loyalty Member Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>