force-app/main/default/objects/Contact/fields/Speaks__c.field-meta.xml
<CustomField>
    <fullName>Speaks__c</fullName>
    <label>Speaks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>