force-app/main/default/objects/Contact/fields/Twitter_Url__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Url__c</fullName>
    <label>Twitter Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>